updated test and README